--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,14 +3,7 @@ version: 0.2
 phases:
   install:
     commands:
-        # Install pip
-      - sudo apt-get install python-pip
-
-      # Install dependencies needed for running tests
-      - npm install
-
-      # Upgrade AWS CLI to the latest version
-      - pip install --upgrade awscli
+        - python -m pip install Flask
   build:
     commands:
       - echo Build started on `date`
