--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,12 +3,13 @@ version: 0.2
 phases:
   install:
     commands:
-        - python -m pip install Flask
+        - echo Install Flask ***
+        - python3 -m pip install Flask
   build:
     commands:
       - echo Build started on `date`
       - echo Compiling the Python code...
-      - python test_app.py
+      - python3 test_app.py
   post_build:
     commands:
       - echo Build completed on `date`
