--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,12 +4,13 @@ phases:
   install:
     commands:
         - echo Install Flask ***
-        - python3 -m pip install Flask
+        # - python3 -m pip install Flask
+        - pip3 install flask
   build:
     commands:
       - echo Build started on `date`
       - echo Compiling the Python code...
-      - python3 test_app.py
+      - python test_app.py
   post_build:
     commands:
       - echo Build completed on `date`
