--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,8 +2,13 @@ version: 0.2
 
 phases:
   install:
+    runtime-versions:
+      python: 3.7
     commands:
-        - python -m pip install Flask
+        - yum install -y amazon-linux-extras-1.6.13
+        - python3.7 -m pip install --upgrade
+        - python3.7 -m pip install -r requirements.txt
+        #- python -m pip install Flask
   build:
     commands:
       - echo Build started on `date`
