--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,7 +7,7 @@ phases:
     commands:
         #- yum install -y amazon-linux-extras-1.6.13
         #- python3.7 -m pip install --upgrade
-        - python3.7 -m pip install --user
+        - python -m pip install --user
         - python3.7 -m pip install -r requirements.txt
         #- python -m pip install Flask
   build:
