--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,11 +5,9 @@ phases:
     runtime-versions:
       python: 3.7
     commands:
-        #- yum install -y amazon-linux-extras-1.6.13
-        #- python3.7 -m pip install --upgrade
         - python -m pip install --user
         #- python -m pip install -r requirements.txt
-        #- python -m pip install Flask
+        - python -m pip install flask
   build:
     commands:
       - echo Build started on `date`
