--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,18 +1,14 @@
 version: 0.2
 
 phases:
-  install:
-    runtime-versions:
-      python: 3.7
-    commands:
-        - python -m pip install --user
-        #- python -m pip install -r requirements.txt
-        - python -m pip install flask
+  #install:
+    #commands:
+        #- python -m pip install Flask
   build:
     commands:
       - echo Build started on `date`
       - echo Compiling the Python code...
-      #- python test_app.py
+      - python test_app.py
   post_build:
     commands:
       - echo Build completed on `date`
@@ -26,3 +22,10 @@ artifacts:
     - scripts/start_flask.sh
     - scripts/stop_flask1.sh
     - scripts/stop_flask.py
+
+
+
+ commands:
+        - python -m pip install --user
+        #- python -m pip install -r requirements.txt
+        - python -m pip install flask
