--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,8 +1,9 @@
 version: 0.2
 
 phases:
-  #install:
-    #commands:
+  install:
+    commands:
+        - echo Install
         #- python -m pip install Flask
   build:
     commands:
