--- a/buildspec.yml
+++ b/buildspec.yml
@@ -4,7 +4,7 @@ phases:
   install:
     commands:
         - echo Install
-        - python3 -m pip install Flask
+        - python -m pip install Flask
   build:
     commands:
       - echo Build started on `date`
