--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,7 +3,9 @@ version: 0.2
 phases:
   install:
     commands:
-        - python -m pip3 install Flask
+        #- python -m pip3 install Flask
+        - pip install --upgrade pip
+        - pip install --upgrade awscli
   build:
     commands:
       - echo Build started on `date`
