--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,9 +3,14 @@ version: 0.2
 phases:
   install:
     commands:
+        - alias python='/usr/bin/python3.7'
+        - . ~/.bashrc
+        - python --version
         #- python -m pip3 install Flask
-        - pip install --upgrade pip
-        - pip install --upgrade awscli
+        - python3 -m pip install pip --upgrade
+        #- sudo yum install python3-pip
+        #- pip install --upgrade pip
+        #- pip install --upgrade awscli
   build:
     commands:
       - echo Build started on `date`
