--- a/buildspec.yml
+++ b/buildspec.yml
@@ -11,10 +11,11 @@ phases:
         #- sudo yum install python3-pip
         #- pip install --upgrade pip
         #- pip install --upgrade awscli
-  pre_build:
-    commands:
-      - pip install -r requirements.txt
-      - pip install -e .
+        - python3.7 -m pip3 install Flask
+  #pre_build:
+    #commands:
+      #- pip install -r requirements.txt
+      #- pip install -e .
   build:
     commands:
       - echo Build started on `date`
