--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,24 +2,13 @@ version: 0.2
 
 phases:
   install:
-    runtime-versions:
-       python: 3.7
     commands:
-        - python --version
-        #- python -m pip3 install Flask
-        #- python3 -m pip install pip --upgrade
-        #- sudo yum install python3-pip
-        #- pip install --upgrade pip
-        #- pip install --upgrade awscli
-        - python3.7 -m pip3 install Flask
-  #pre_build:
-    #commands:
-      #- pip install -r requirements.txt
-      #- pip install -e .
+        - python -m pip install Flask
   build:
     commands:
       - echo Build started on `date`
       - echo Compiling the Python code...
+      #- python test_app.py
   post_build:
     commands:
       - echo Build completed on `date`
